src/test/ui/impl-trait/issues/infinite-impl-trait-issue-38064.stderr
error[E0720]: opaque type expands to a recursive type
  --> $DIR/infinite-impl-trait-issue-38064.rs:8:13
   |
LL | fn foo() -> impl Quux {
   |             ^^^^^^^^^ expands to self-referential type
   |
   = note: expanded type is `foo::Foo<bar::Bar<impl Quux>>`

error[E0720]: opaque type expands to a recursive type
  --> $DIR/infinite-impl-trait-issue-38064.rs:14:13
   |
LL | fn bar() -> impl Quux {
   |             ^^^^^^^^^ expands to self-referential type
   |
   = note: expanded type is `bar::Bar<foo::Foo<impl Quux>>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0720`.
